# vega

./: .ansible-lint  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
.github/workflows/: main.yml
playbooks/: homelab.yml  semaphore.yml
playbooks/apps/: argocd.yml  deploy.yml
playbooks/cluster/: bootstrap.yml  ingress.yml  install.yml  main.yml  monitoring.yml  network.yml  storage.yml
playbooks/cluster/manifests/: node.yml
playbooks/provision/: install.yml  main.yml
roles/apps/defaults/: main.yml
roles/apps/tasks/: deploy.yml  install.yml  main.yml
roles/apps/templates/: application_set.j2  registry.j2
roles/gitea/defaults/: main.yml
roles/gitea/tasks/: deploy.yml  main.yml
roles/grafana/defaults/: main.yml
roles/grafana/tasks/: deploy.yml  ingress.yml  main.yml
roles/ingress-controller/defaults/: main.yml
roles/ingress-controller/tasks/: ingress.yml  install.yml  main.yml
roles/iscsi/tasks/: install.yml  main.yml
roles/loki/defaults/: main.yml
roles/loki/tasks/: deploy.yml  install.yml  main.yml  promtail.yml
roles/metrics-server/defaults/: main.yml
roles/metrics-server/tasks/: deploy.yml  main.yml
roles/minio/defaults/: main.yml
roles/minio/tasks/: deploy.yml  main.yml
roles/nfs-provisioner/defaults/: main.yml
roles/nfs-provisioner/tasks/: deploy.yml  install.yml  main.yml
roles/nfs/defaults/: main.yml
roles/nfs/handlers/: main.yml
roles/nfs/tasks/: install.yml  main.yml
roles/nfs/templates/: exports.j2
roles/openebs/defaults/: main.yml
roles/openebs/tasks/: deploy.yml  main.yml
(+17 files in other folders)
